Deprecate remaining metadata listSyncUncached access from production